@startuml Diagrama de Clases - Modelo de Datos
!theme plain
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #E8F5E9
    BorderColor #4CAF50
    ArrowColor #388E3C
}

' ===== MODELOS =====

class Usuario {
    - int id
    - string nombre
    - string apellido_paterno
    - string apellido_materno
    - string ci
    - string email
    - string password_hash
    - int rol_id
    - int? grado_id
    - int? materia_id
    - string? telefono
    - string? foto_perfil
    - string estado
    - datetime ultimo_acceso
    - int intentos_login
    - datetime? bloqueado_hasta
    --
    + crear(): array
    + obtenerTodos(filtros, limit, offset): array
    + obtenerPorId(id): array
    + obtenerPorEmail(email): array
    + verificarPassword(email, password): bool
    + actualizar(): bool
    + actualizarPassword(id, newPassword): bool
    + eliminar(id): bool
    + incrementarIntentosLogin(email): void
    + bloquearUsuario(email, minutos): void
    + estaBloqueado(email): bool
    + contar(filtros): int
}

class Video {
    - int id
    - string titulo
    - string descripcion
    - string archivo_path
    - string archivo_nombre
    - string? thumbnail_path
    - int duracion
    - int tamanio
    - string formato
    - string? resolucion
    - string? codec
    - int? tema_id
    - int materia_id
    - int grado_id
    - int docente_id
    - int visualizaciones
    - string estado
    - datetime fecha_subida
    --
    + crear(): array
    + obtenerTodos(filtros, limit, offset, orderBy, orderDir): array
    + obtenerPorId(id): array
    + actualizar(): bool
    + eliminar(id): bool
    + buscar(busqueda, limit, offset): array
    + obtenerMasPopulares(limit): array
    + obtenerRecientes(limit): array
    + estadisticasPorMateria(): array
    + estadisticasPorGrado(): array
    + marcarVideosHuerfanos(): int
}

class Materia {
    - int id
    - int campo_id
    - string nombre
    - string sigla
    - string? descripcion
    - string? color
    - string? icono
    - string estado
    --
    + obtenerTodos(filtros): array
    + obtenerPorId(id): array
    + obtenerConTemas(id, gradoId): array
    + obtenerPorCampo(): array
}

class Grado {
    - int id
    - string nombre
    - int nivel
    - string sigla
    - string? descripcion
    - string estado
    - int orden
    --
    + obtenerTodos(estado): array
    + obtenerPorNivel(nivel): array
    + obtenerConTemas(id, materiaId): array
}

class Campo {
    - int id
    - string nombre
    - string? descripcion
    - string? color
    - string? icono
    - string estado
    - int orden
    --
    + obtenerTodos(): array
    + obtenerPorId(id): array
    + obtenerConMaterias(id): array
}

class Tema {
    - int id
    - string nombre
    - string? nombre_corto
    - string? descripcion
    - int materia_id
    - int grado_id
    - string estado
    - int orden
    --
    + obtenerTodos(filtros): array
    + obtenerPorId(id): array
    + obtenerPorMateriaYGrado(materiaId, gradoId): array
    + buscar(busqueda, materiaId, gradoId): array
}

class Reproduccion {
    - int id
    - int video_id
    - int? usuario_id
    - string? ip_address
    - string? user_agent
    - int tiempo_reproducido
    - int porcentaje_visto
    - bool completado
    - datetime fecha_inicio
    - datetime? fecha_fin
    --
    + crear(): int
    + actualizar(id, tiempo, porcentaje, completado): bool
    + obtenerPorVideo(videoId): array
    + obtenerPorUsuario(usuarioId): array
    + obtenerEstadisticasPorFecha(inicio, fin): array
    + obtenerHorasPorMateria(): array
    + obtenerHorasPorGrado(): array
}

class Estadistica {
    - int id
    - string tipo
    - string categoria
    - json datos_json
    - date fecha_referencia
    - datetime fecha_generacion
    --
    + obtenerGenerales(): array
    + obtenerDashboard(): array
    + generarDiarias(fecha): bool
    + obtenerPorDocente(docenteId): array
}

class DocenteAsignacion {
    - int id
    - int docente_id
    - int materia_id
    - int grado_id
    - string estado
    - datetime fecha_asignacion
    - int? usuario_asignador_id
    --
    + crear(docenteId, materiaId, gradoId, usuarioAsignadorId): int
    + obtenerPorDocente(docenteId): array
    + obtenerMateriasDocente(docenteId): array
    + obtenerGradosDocente(docenteId): array
    + tieneAsignacion(docenteId, materiaId, gradoId): bool
    + tieneMateria(docenteId, materiaId): bool
    + tieneGrado(docenteId, gradoId): bool
    + asignarMultiples(docenteId, asignaciones, usuarioAsignadorId): bool
    + obtenerTodosConAsignaciones(): array
}

class Rol {
    - int id
    - string nombre
    - json permisos
    - string? descripcion
    - string estado
    --
    + obtenerTodos(): array
    + obtenerPorId(id): array
}

' ===== RELACIONES =====

' Usuario relaciones
Usuario "N" --> "1" Rol : tiene >
Usuario "N" o--> "1" Materia : asignado a >
Usuario "N" o--> "1" Grado : asignado a >
Usuario "1" --> "N" Video : crea >
Usuario "1" --> "N" DocenteAsignacion : tiene >
Usuario "1" o--> "N" Reproduccion : visualiza >

' Video relaciones
Video "N" --> "1" Usuario : creado por >
Video "N" --> "1" Materia : pertenece a >
Video "N" --> "1" Grado : para grado >
Video "N" o--> "1" Tema : sobre tema >
Video "1" --> "N" Reproduccion : tiene >

' Materia relaciones
Materia "N" --> "1" Campo : dentro de >
Materia "1" --> "N" Tema : contiene >
Materia "1" --> "N" DocenteAsignacion : asignada a >

' Grado relaciones
Grado "1" --> "N" Tema : contiene >
Grado "1" --> "N" DocenteAsignacion : asignado a >

' Tema relaciones
Tema "N" --> "1" Materia : pertenece a >
Tema "N" --> "1" Grado : para grado >

' DocenteAsignacion relaciones
DocenteAsignacion "N" --> "1" Usuario : asigna docente >
DocenteAsignacion "N" --> "1" Materia : asigna materia >
DocenteAsignacion "N" --> "1" Grado : asigna grado >

' Reproduccion relaciones
Reproduccion "N" --> "1" Video : reproduce >
Reproduccion "N" o--> "1" Usuario : usuario >

note top of Usuario
  Almacena tanto administradores como docentes.
  Incluye control de intentos de login y bloqueo.
end note

note top of DocenteAsignacion
  Tabla central que relaciona docentes con
  combinaciones materia-grado. Reemplaza las
  tablas separadas docente_materias y docente_grados.
end note

note bottom of Video
  Incluye metadatos completos del archivo de video
  y detección automática de videos huérfanos
  (sin archivo físico).
end note

@enduml
